sonarlint refactor